fixed remove shift routing bug

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
  
  button {
     padding-top: 5px;
+    background-color: white;
+    border: 1px solid grey;
+    border-radius: 5px;
  }
 
  button:hover {
